--- a/src/components/add/AddEmployee.css
+++ b/src/components/add/AddEmployee.css
@@ -4,7 +4,7 @@
     max-width: 500px;
     margin: 10vh auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #f0e8e8;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     
@@ -35,7 +35,7 @@
   .form-group input {
     width: 100%;
     padding: 8px;
-    border: 1px solid #aca9a9;
+    border: 1px solid #847e7e;
     border-radius: 4px;
     font-size: 16px;
   }
