--- a/src/components/list/EmployeeList.css
+++ b/src/components/list/EmployeeList.css
@@ -1,26 +1,24 @@
-h2{
-
-  font-size: 20px;
+h1 {
+  color: #6a0dad;
   font-weight: bold;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 table {
-width: 100%;
-border-collapse: collapse;
-
+  width: 100%;
+  border-collapse: collapse;
 }
 
 table, th, td {
-border: 1px solid #ddd;
+  border: 2px solid #2C0A5B; /* Darker border color */
 }
 
 th, td {
-padding: 10px;
-text-align: left;
+  padding: 10px;
+  text-align: left;
 }
 
 form div {
-margin-bottom: 10px;
+  margin-bottom: 10px;
 }
