--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -45,7 +45,8 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  margin: 0 30px;
+  font-size: 25px;
   height: 100%;
 }
 
