--- a/src/components/add/AddEmployee.css
+++ b/src/components/add/AddEmployee.css
@@ -33,7 +33,7 @@
   }
   
   .form-group input {
-    width: 100%;
+    width: 90%;
     padding: 8px;
     border: 1px solid #847e7e;
     border-radius: 4px;
@@ -74,8 +74,9 @@
     background-color: #8a2be2;
   }
   
-  @media (max-width: 600px) {
+  @media screen and (max-width: 768px) {
     .add-employee-container {
       padding: 15px;
+      width: 80%;
     }
   }
