--- a/src/components/list/EmployeeList.css
+++ b/src/components/list/EmployeeList.css
@@ -2,9 +2,11 @@ h1 {
   color: #6a0dad;
   font-weight: bold;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 30px 0;
 }
-
+.table-container{
+  margin: 0 20px;
+}
 table {
   width: 100%;
   border-collapse: collapse;
@@ -21,4 +23,11 @@ th, td {
 
 form div {
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 25px;
+  }
+
 }
